parser/ccii_parser.go
// Code generated from CCII.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // CCII

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'{'", "'}'", "'='", "','", "'['", "']'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "SCALAR",
}

var ruleNames = []string{
	"main", "object", "object_item", "object_intern", "array", "array_item",
	"array_intern",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type CCIIParser struct {
	*antlr.BaseParser
}

func NewCCIIParser(input antlr.TokenStream) *CCIIParser {
	this := new(CCIIParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "CCII.g4"

	return this
}

// CCIIParser tokens.
const (
	CCIIParserEOF    = antlr.TokenEOF
	CCIIParserT__0   = 1
	CCIIParserT__1   = 2
	CCIIParserT__2   = 3
	CCIIParserT__3   = 4
	CCIIParserT__4   = 5
	CCIIParserT__5   = 6
	CCIIParserSCALAR = 7
)

// CCIIParser rules.
const (
	CCIIParserRULE_main          = 0
	CCIIParserRULE_object        = 1
	CCIIParserRULE_object_item   = 2
	CCIIParserRULE_object_intern = 3
	CCIIParserRULE_array         = 4
	CCIIParserRULE_array_item    = 5
	CCIIParserRULE_array_intern  = 6
)

// IMainContext is an interface to support dynamic dispatch.
type IMainContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMainContext differentiates from other interfaces.
	IsMainContext()
}

type MainContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainContext() *MainContext {
	var p = new(MainContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCIIParserRULE_main
	return p
}

func (*MainContext) IsMainContext() {}

func NewMainContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainContext {
	var p = new(MainContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCIIParserRULE_main

	return p
}

func (s *MainContext) GetParser() antlr.Parser { return s.parser }

func (s *MainContext) Object() IObjectContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObjectContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IObjectContext)
}

func (s *MainContext) Array() IArrayContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArrayContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IArrayContext)
}

func (s *MainContext) SCALAR() antlr.TerminalNode {
	return s.GetToken(CCIIParserSCALAR, 0)
}

func (s *MainContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.EnterMain(s)
	}
}

func (s *MainContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.ExitMain(s)
	}
}

func (s *MainContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CCIIVisitor:
		return t.VisitMain(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CCIIParser) Main() (localctx IMainContext) {
	localctx = NewMainContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CCIIParserRULE_main)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(17)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case CCIIParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(14)
			p.Object()
		}

	case CCIIParserT__4:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(15)
			p.Array()
		}

	case CCIIParserSCALAR:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(16)
			p.Match(CCIIParserSCALAR)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IObjectContext is an interface to support dynamic dispatch.
type IObjectContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsObjectContext differentiates from other interfaces.
	IsObjectContext()
}

type ObjectContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyObjectContext() *ObjectContext {
	var p = new(ObjectContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCIIParserRULE_object
	return p
}

func (*ObjectContext) IsObjectContext() {}

func NewObjectContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ObjectContext {
	var p = new(ObjectContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCIIParserRULE_object

	return p
}

func (s *ObjectContext) GetParser() antlr.Parser { return s.parser }

func (s *ObjectContext) Object_intern() IObject_internContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObject_internContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IObject_internContext)
}

func (s *ObjectContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ObjectContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ObjectContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.EnterObject(s)
	}
}

func (s *ObjectContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.ExitObject(s)
	}
}

func (s *ObjectContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CCIIVisitor:
		return t.VisitObject(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CCIIParser) Object() (localctx IObjectContext) {
	localctx = NewObjectContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CCIIParserRULE_object)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(19)
		p.Match(CCIIParserT__0)
	}
	{
		p.SetState(20)
		p.Object_intern()
	}
	{
		p.SetState(21)
		p.Match(CCIIParserT__1)
	}

	return localctx
}

// IObject_itemContext is an interface to support dynamic dispatch.
type IObject_itemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsObject_itemContext differentiates from other interfaces.
	IsObject_itemContext()
}

type Object_itemContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyObject_itemContext() *Object_itemContext {
	var p = new(Object_itemContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCIIParserRULE_object_item
	return p
}

func (*Object_itemContext) IsObject_itemContext() {}

func NewObject_itemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Object_itemContext {
	var p = new(Object_itemContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCIIParserRULE_object_item

	return p
}

func (s *Object_itemContext) GetParser() antlr.Parser { return s.parser }

func (s *Object_itemContext) AllSCALAR() []antlr.TerminalNode {
	return s.GetTokens(CCIIParserSCALAR)
}

func (s *Object_itemContext) SCALAR(i int) antlr.TerminalNode {
	return s.GetToken(CCIIParserSCALAR, i)
}

func (s *Object_itemContext) Object() IObjectContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObjectContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IObjectContext)
}

func (s *Object_itemContext) Array() IArrayContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArrayContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IArrayContext)
}

func (s *Object_itemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Object_itemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Object_itemContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.EnterObject_item(s)
	}
}

func (s *Object_itemContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.ExitObject_item(s)
	}
}

func (s *Object_itemContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CCIIVisitor:
		return t.VisitObject_item(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CCIIParser) Object_item() (localctx IObject_itemContext) {
	localctx = NewObject_itemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, CCIIParserRULE_object_item)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(30)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(23)
			p.Match(CCIIParserSCALAR)
		}
		{
			p.SetState(24)
			p.Match(CCIIParserT__2)
		}
		{
			p.SetState(25)
			p.Match(CCIIParserSCALAR)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(26)
			p.Match(CCIIParserSCALAR)
		}
		{
			p.SetState(27)
			p.Object()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(28)
			p.Match(CCIIParserSCALAR)
		}
		{
			p.SetState(29)
			p.Array()
		}

	}

	return localctx
}

// IObject_internContext is an interface to support dynamic dispatch.
type IObject_internContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsObject_internContext differentiates from other interfaces.
	IsObject_internContext()
}

type Object_internContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyObject_internContext() *Object_internContext {
	var p = new(Object_internContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCIIParserRULE_object_intern
	return p
}

func (*Object_internContext) IsObject_internContext() {}

func NewObject_internContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Object_internContext {
	var p = new(Object_internContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCIIParserRULE_object_intern

	return p
}

func (s *Object_internContext) GetParser() antlr.Parser { return s.parser }

func (s *Object_internContext) AllObject_item() []IObject_itemContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IObject_itemContext)(nil)).Elem())
	var tst = make([]IObject_itemContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IObject_itemContext)
		}
	}

	return tst
}

func (s *Object_internContext) Object_item(i int) IObject_itemContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObject_itemContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IObject_itemContext)
}

func (s *Object_internContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Object_internContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Object_internContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.EnterObject_intern(s)
	}
}

func (s *Object_internContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.ExitObject_intern(s)
	}
}

func (s *Object_internContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CCIIVisitor:
		return t.VisitObject_intern(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CCIIParser) Object_intern() (localctx IObject_internContext) {
	localctx = NewObject_internContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, CCIIParserRULE_object_intern)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(40)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CCIIParserSCALAR {
		{
			p.SetState(32)
			p.Object_item()
		}
		p.SetState(37)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == CCIIParserT__3 {
			{
				p.SetState(33)
				p.Match(CCIIParserT__3)
			}
			{
				p.SetState(34)
				p.Object_item()
			}

			p.SetState(39)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}

	return localctx
}

// IArrayContext is an interface to support dynamic dispatch.
type IArrayContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsArrayContext differentiates from other interfaces.
	IsArrayContext()
}

type ArrayContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArrayContext() *ArrayContext {
	var p = new(ArrayContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCIIParserRULE_array
	return p
}

func (*ArrayContext) IsArrayContext() {}

func NewArrayContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ArrayContext {
	var p = new(ArrayContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCIIParserRULE_array

	return p
}

func (s *ArrayContext) GetParser() antlr.Parser { return s.parser }

func (s *ArrayContext) Array_intern() IArray_internContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArray_internContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IArray_internContext)
}

func (s *ArrayContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ArrayContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ArrayContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.EnterArray(s)
	}
}

func (s *ArrayContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.ExitArray(s)
	}
}

func (s *ArrayContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CCIIVisitor:
		return t.VisitArray(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CCIIParser) Array() (localctx IArrayContext) {
	localctx = NewArrayContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, CCIIParserRULE_array)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(CCIIParserT__4)
	}
	{
		p.SetState(43)
		p.Array_intern()
	}
	{
		p.SetState(44)
		p.Match(CCIIParserT__5)
	}

	return localctx
}

// IArray_itemContext is an interface to support dynamic dispatch.
type IArray_itemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsArray_itemContext differentiates from other interfaces.
	IsArray_itemContext()
}

type Array_itemContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArray_itemContext() *Array_itemContext {
	var p = new(Array_itemContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCIIParserRULE_array_item
	return p
}

func (*Array_itemContext) IsArray_itemContext() {}

func NewArray_itemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Array_itemContext {
	var p = new(Array_itemContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCIIParserRULE_array_item

	return p
}

func (s *Array_itemContext) GetParser() antlr.Parser { return s.parser }

func (s *Array_itemContext) Object() IObjectContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObjectContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IObjectContext)
}

func (s *Array_itemContext) Array() IArrayContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArrayContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IArrayContext)
}

func (s *Array_itemContext) SCALAR() antlr.TerminalNode {
	return s.GetToken(CCIIParserSCALAR, 0)
}

func (s *Array_itemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Array_itemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Array_itemContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.EnterArray_item(s)
	}
}

func (s *Array_itemContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.ExitArray_item(s)
	}
}

func (s *Array_itemContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CCIIVisitor:
		return t.VisitArray_item(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CCIIParser) Array_item() (localctx IArray_itemContext) {
	localctx = NewArray_itemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, CCIIParserRULE_array_item)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(49)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case CCIIParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(46)
			p.Object()
		}

	case CCIIParserT__4:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(47)
			p.Array()
		}

	case CCIIParserSCALAR:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(48)
			p.Match(CCIIParserSCALAR)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IArray_internContext is an interface to support dynamic dispatch.
type IArray_internContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsArray_internContext differentiates from other interfaces.
	IsArray_internContext()
}

type Array_internContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArray_internContext() *Array_internContext {
	var p = new(Array_internContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCIIParserRULE_array_intern
	return p
}

func (*Array_internContext) IsArray_internContext() {}

func NewArray_internContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Array_internContext {
	var p = new(Array_internContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCIIParserRULE_array_intern

	return p
}

func (s *Array_internContext) GetParser() antlr.Parser { return s.parser }

func (s *Array_internContext) AllArray_item() []IArray_itemContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IArray_itemContext)(nil)).Elem())
	var tst = make([]IArray_itemContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IArray_itemContext)
		}
	}

	return tst
}

func (s *Array_internContext) Array_item(i int) IArray_itemContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArray_itemContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IArray_itemContext)
}

func (s *Array_internContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Array_internContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Array_internContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.EnterArray_intern(s)
	}
}

func (s *Array_internContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCIIListener); ok {
		listenerT.ExitArray_intern(s)
	}
}

func (s *Array_internContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CCIIVisitor:
		return t.VisitArray_intern(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CCIIParser) Array_intern() (localctx IArray_internContext) {
	localctx = NewArray_internContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, CCIIParserRULE_array_intern)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<CCIIParserT__0)|(1<<CCIIParserT__4)|(1<<CCIIParserSCALAR))) != 0 {
		{
			p.SetState(51)
			p.Array_item()
		}
		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == CCIIParserT__3 {
			{
				p.SetState(52)
				p.Match(CCIIParserT__3)
			}
			{
				p.SetState(53)
				p.Array_item()
			}

			p.SetState(58)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}

	return localctx
}
